src/objects/DRDW_Capability__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ERL</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Related_Project_bck__c</fullName>
        <label>Related Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Activity_Project__c</fullName>
        <formula>Related_Project__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual End Date</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability_Area__c</fullName>
        <label>Activity Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Week</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
                <value>
                    <fullName>3 Weeks</fullName>
                </value>
                <value>
                    <fullName>4 Weeks</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERL_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERL Primary Contact</description>
        <label>ERL Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capabilities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Budget__c</fullName>
        <label>Estimated Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Go_No_Go__c</fullName>
        <label>Go/No Go</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Go</fullName>
                </value>
                <value>
                    <fullName>No Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invitro_Invivo__c</fullName>
        <label>In silico/In vitro/In vivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In vitro</fullName>
                </value>
                <value>
                    <fullName>In vivo</fullName>
                </value>
                <value>
                    <fullName>In silico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Hours_Per_Week__c</fullName>
        <label>Number of Hours Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
	 <fields>
        <fullName>DRDW_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related ERL Request</label>
        <referenceTo>DRDW_Cap_Request__c</referenceTo>
        <relationshipLabel>DRDW Activities</relationshipLabel>
        <relationshipName>DRDW_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Planned End Date</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <inlineHelpText>Decision to Evaluate (DTE):</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Evaluation Project</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipName>Capabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Research_Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Research Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capabilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
	 <fields>
        <fullName>Title_ex__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <formula>IF( CONTAINS(TEXT(Duration__c),&apos;Week&apos;),
( 7 * VALUE(LEFT(TEXT(Duration__c),1)) + Actual_Start_Date__c)
,DATE(
    YEAR( Actual_Start_Date__c ) +
    FLOOR((VALUE(LEFT(TEXT(Duration__c),1)) + MONTH(Actual_Start_Date__c)) / 12) -
    IF (MOD(MONTH(Actual_Start_Date__c) + VALUE(LEFT(TEXT(Duration__c),1)), 12) = 0,
        1,
        0),

    MOD((VALUE(LEFT(TEXT(Duration__c),1)) + MONTH(Actual_Start_Date__c) - 1), 12) + 1,

    DAY(Actual_Start_Date__c)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_budget__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total budget of associated budget masters</description>
        <label>Total budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
	<fields>
        <fullName>UniqueProjActTitle__c</fullName>
        <label>UniqueProjActTitle</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
</fields>
	 <fields>
        <fullName>Project_Business_Unit__c</fullName>
        <label>Project Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
  <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <description>The proposed start date of the activity. If this date shifts forward or backward, the resource assignment also shifts accordingly.</description>
        <inlineHelpText>The proposed start date of the activity. If this date shifts forward or backward, the resource assignment also shifts accordingly.</inlineHelpText>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <label>DRDW Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAP-{0000}</displayFormat>
        <label>Capability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Activities</pluralLabel>
    <recordTypes>
        <fullName>External_Activity</fullName>
        <active>true</active>
        <label>External Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea_Capability</fullName>
        <active>true</active>
        <label>Idea Capability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Study_Activity</fullName>
        <active>true</active>
        <description>This record type is used in relation with the GO request associated to the Projects</description>
        <label>Study Activity</label>
    </recordTypes>
	 <recordTypes>
        <fullName>Request_Activity</fullName>
        <active>true</active>
        <label>Request Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Capability</fullName>
        <active>true</active>
        <label>Project Capability</label>
    </recordTypes>
	<sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>DRDW_Capability_Share__c</fullName>
        <label>Capability Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Actual_Start_date_less_then_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Actual_Start_Date__c &gt; Actual_End_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date Can&apos;t less than Actual start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_Date_prior_to_DTE</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(RecordType.DeveloperName == &apos;Idea_Capability&apos;, Planned_Start_Date__c &lt;  Related_Idea__r.Decision_to_Evaluate_DTE__c ),true,false)</errorConditionFormula>
        <errorDisplayField>Planned_Start_Date__c</errorDisplayField>
        <errorMessage>Entered date is prior to DTE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Planned_date</fullName>
        <active>true</active>
        <description>The planned end date should not be less then planned start date</description>
        <errorConditionFormula>Planned_End_Date__c &lt; Planned_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Planned_End_Date__c</errorDisplayField>
        <errorMessage>Planned end date cannot be less then planned start date</errorMessage>
    </validationRules>
</CustomObject>